--- a/client/views/partials/home.html
+++ b/client/views/partials/home.html
@@ -13,5 +13,5 @@
 </ul>
 <form ng-submit="sendMessage()">
     <input type="text" ng-model="message" placeholder="Message">
-    <input type="submit" value="send" class="btn btn-success">
+    <input type="submit" value="Send" class="btn btn-success">
 </form>
