--- a/client/views/partials/home.html
+++ b/client/views/partials/home.html
@@ -15,3 +15,10 @@
     <input type="text" ng-model="message" placeholder="Message">
     <input type="submit" value="Send" class="btn btn-success">
 </form>
+
+<h4>OR</h4>
+
+<form ng-submit="changeName()">
+    <input type="text" ng-model="newname" placeholder="Name">
+    <input type="submit" value="Change Name" class="btn btn-danger">
+</form>
