--- a/client/views/partials/home.html
+++ b/client/views/partials/home.html
@@ -1,24 +1,33 @@
-<p>{{hello}}</p>
-<h3>Users</h3>
-<ul>
-    <li ng-repeat="user in users">
-        {{user}}
-    </li>
-</ul>
-<h3>Messages</h3>
-<ul>
-    <li ng-repeat="message in messages">
-        {{message.user}} : {{message.message}}
-    </li>
-</ul>
-<form ng-submit="sendMessage()">
-    <input type="text" ng-model="message" placeholder="Message">
-    <input type="submit" value="Send" class="btn btn-success">
-</form>
+<div class="container">
+    <h4>User List</h4>
+    <ul>
+        <li ng-repeat="user in users">
+            <p class="p-custom text-custom-1"/>
+                {{user}}
+            </p>
+        </li>
+    </ul>
+    <h4>Messages</h4>
+    <ul>
+        <li ng-repeat="message in messages">
+            <p class="p-custom text-custom-1"/>
+                <img ng-src="{{message.src}}" style="width:30px">  {{message.user}} : {{message.message}}
+            </p>
+        </li>
+    </ul>
+    <div class="panel">
+        <form ng-submit="sendMessage()">
+            <input type="text" ng-model="message" placeholder="Message">
+            <input type="submit" value="Send" class="btn btn-success">
+        </form>
+    </div>
 
-<h4>OR</h4>
+    <h4>OR</h4>
 
-<form ng-submit="changeName()">
-    <input type="text" ng-model="newname" placeholder="Name">
-    <input type="submit" value="Change Name" class="btn btn-danger">
-</form>
+    <div class="panel">
+        <form ng-submit="changeName()">
+            <input type="text" ng-model="newname" placeholder="Name">
+            <input type="submit" value="Change Name" class="btn btn-danger">
+        </form>
+    </div>
+</div>
