--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -3,8 +3,8 @@
   <head>
     <title>AngularJS + NodeJS chat</title>
     <!-- stylesheets -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <link rel='stylesheet' href='components/bootstrap/css/bootstrap.min.css'/>
+    <link rel='stylesheet' href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css'/>
+    <link href='//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' rel='stylesheet'>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <!-- scripts -->
     <!-- meta -->
