--- a/client/views/partials/home.html
+++ b/client/views/partials/home.html
@@ -1,6 +1,47 @@
 <div class="container">
     <div class="row">
-        <div class="col-sm-offset-10 user-list">
+        <div class="col-xs-12 col-sm-4">
+            <div class="message-box" id="message-box">
+                <h4>
+                    <span class="fa-stack fa-lg">
+                      <i class="fa fa-circle fa-stack-2x"></i>
+                      <i class="fa fa-paper-plane-o fa-stack-1x fa-inverse"></i>
+                    </span>
+                    &nbsp; Messages
+                </h4>
+                <ul>
+                        <li ng-repeat="message in messages">
+                                <p id="form">
+                                    <small><i class="fa fa-user"></i> {{message.user}} : {{message.message}}</small>
+                                </p>
+                        </li>
+                </ul>
+            </div>
+            <form class="form-inline" ng-submit="sendMessage()" style="margin-top: 10px;">
+                <div class="form-group">
+                    <input type="text" class="form-control" ng-model="message" placeholder="Message" required>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-sm btn-success"><i class="fa fa-paper-plane-o"></i>&nbsp;Send</button>
+                </div>
+            </form>
+            <form class="form-inline edit-box" ng-submit="changeName()">
+                <h4>
+                    <span class="fa-stack fa-lg">
+                      <i class="fa fa-circle fa-stack-2x"></i>
+                      <i class="fa fa-pencil-square-o fa-stack-1x fa-inverse"></i>
+                    </span>
+                    &nbsp; Edit
+                </h4>
+                <div class="form-group">
+                    <input type="text" class="form-control" ng-model="newname" placeholder="Change Name" required>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-sm btn-danger"><i class="fa fa-exchange"></i>&nbsp;Change Name</button>
+                </div>
+            </form>
+        </div>
+        <div class="user-list hidden-xs col-xs-12 col-sm-offset-4 col-sm-2">
             <div class="text-center" style="padding-top:5px;">
                 <i class="fa fa-users fa-3x"></i>
             </div>
@@ -15,43 +56,4 @@
             </ul>
         </div>
     </div>
-    <div class="message-box">
-        <h4>
-            <span class="fa-stack fa-lg">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-paper-plane-o fa-stack-1x fa-inverse"></i>
-            </span>
-            &nbsp; Messages
-        </h4>
-        <ul>
-                <li ng-repeat="message in messages">
-                        <p>
-                            <small><i class="fa fa-user"></i> {{message.user}} : {{message.message}}</small>
-                        </p>
-                </li>
-        </ul>
-    </div>
-    <form class="form-inline" ng-submit="sendMessage()" style="margin-top: 10px;">
-        <div class="form-group">
-            <input type="text" class="form-control" ng-model="message" placeholder="Message" required>
-        </div>
-        <div class="form-group">
-            <button type="submit" class="btn btn-sm btn-success"><i class="fa fa-paper-plane-o"></i>&nbsp;Send</button>
-        </div>
-    </form>
-    <form class="form-inline" ng-submit="changeName()">
-        <h4>
-            <span class="fa-stack fa-lg">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-pencil-square-o fa-stack-1x fa-inverse"></i>
-            </span>
-            &nbsp; Edit
-        </h4>
-        <div class="form-group">
-            <input type="text" class="form-control" ng-model="newname" placeholder="Change Name" required>
-        </div>
-        <div class="form-group">
-            <button type="submit" class="btn btn-sm btn-danger"><i class="fa fa-exchange"></i>&nbsp;Change Name</button>
-        </div>
-    </form>
 </div>
