updated home file

--- a/client/views/partials/home.html
+++ b/client/views/partials/home.html
@@ -1,4 +1,8 @@
 <div class="container">
+    <div class="text-center">
+        <h2><i class="fa fa-weixin"></i>&nbsp; ng-chat</h2>
+        <h4>A responsive chat room built in AngularJS + NodeJS + Bootstrap</h4>
+    </div>
     <div class="row">
         <div class="col-xs-12 col-sm-4">
             <div class="message-box" id="message-box">
@@ -56,4 +60,7 @@
             </ul>
         </div>
     </div>
+</div>
+<div class="text-right">
+    <p>&copy; <a href="github.com/sattarab"> sattarab </a></p>
 </div>
