added scroll directive

--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -6,6 +6,12 @@
     <link rel='stylesheet' href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css'/>
     <link href='//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' rel='stylesheet'>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <style type="text/css">
+          [scroll-div]{
+            height: 165px;
+            overflow-y: scroll;
+          }
+    </style>
     <!-- scripts -->
     <!-- meta -->
     <meta name="Description" content="MagniSci simiplifies scientific image analysis">
@@ -22,9 +28,9 @@
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-resource.min.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-cookies.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="javascripts/directives.js"></script>
     <script type="text/javascript" src="javascripts/factory.js"></script>
     <script type="text/javascript" src="javascripts/controllers.js"></script>
-    <script type="text/javascript" src="javascripts/directives.js"></script>
     <script type="text/javascript" src="javascripts/app.js"></script>
   </body>
 </html>
