--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -7,6 +7,9 @@
     <link href='//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' rel='stylesheet'>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="components/nvd3/nv.d3.css"/>
+    <link href="components/c3/c3.css" rel="stylesheet" type="text/css">
+    <script src="components/d3/d3.min.js" charset="utf-8"></script>
+    <script src="components/c3/c3.min.js"></script>
     <style type="text/css">
           [scroll-div]{
             height: 165px;
@@ -22,14 +25,13 @@
   </head>
   <body>
     <div>
-        <ng-view></ng-view>
+            <ng-view></ng-view>
     </div>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-animate.min.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.min.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-resource.min.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-cookies.min.js"></script>
-    <script src="components/d3/d3.js"></script>
     <script src="components/nvd3/nv.d3.js"></script>
     <script src="components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
     <script src="/socket.io/socket.io.js"></script>
